<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/ll_edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_sword"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/edit_name"
            android:layout_weight="1"
            android:fontFamily="@font/courbd"
            android:includeFontPadding="false"
            android:textSize="40sp" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/ed_new_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="@color/colorPrimary"
        android:hint="@string/enter_your_name"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:selectAllOnFocus="false"
        android:textSize="18sp"
        android:fontFamily="@font/boldi"
        android:textAlignment="center" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/btn_cancel_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:fontFamily="@font/boldi"
            android:textColor="@color/colorPrimaryDark"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_confirm_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:layout_weight="1"
            android:fontFamily="@font/boldi"
            android:textColor="@color/colorAccent"/>


    </LinearLayout>

</LinearLayout>