<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_skull"
        android:background="@color/transparent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/tv_recreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/courbd"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/you_died"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center">

        <Button
            android:id="@+id/btn_revive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/boldi"
            android:textColor="@color/colorAccent"
            android:text="@string/revive"/>

        <Button
            android:id="@+id/btn_new_character"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="@font/boldi"
            android:text="@string/new_character"/>

    </LinearLayout>

</LinearLayout>