<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option"
            android:paddingStart="10dp"
            android:fontFamily="@font/courbd"
            android:includeFontPadding="false"
            android:textSize="40sp" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#707070" />

    <LinearLayout
        android:id="@+id/ll_edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:src="@drawable/ic_sword"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_your_name"
            android:fontFamily="@font/cour"
            android:includeFontPadding="false"
            android:textSize="22sp" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#707070" />

    <LinearLayout
        android:id="@+id/ll_report_bug"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:src="@drawable/ic_bug"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_a_bug"
            android:fontFamily="@font/cour"
            android:includeFontPadding="false"
            android:textSize="22sp" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#707070" />

    <LinearLayout
        android:id="@+id/ll_credit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:src="@drawable/ic_credit"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credit"
            android:fontFamily="@font/cour"
            android:includeFontPadding="false"
            android:textSize="22sp" />

    </LinearLayout>


</LinearLayout>