<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_title"
            android:paddingStart="10dp"
            android:fontFamily="@font/courbd"
            android:includeFontPadding="false"
            android:textSize="40sp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#707070" />
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingEnd="20dp"
        android:paddingStart="30dp">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/gifImageView"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/npc_seller" />

        <TextView
            android:id="@+id/tv_store_dialogue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="13sp"
            android:fontFamily="@font/courbd"
            android:text="..." />



    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <!--<ImageView-->
        <!--android:id="@+id/title_drop"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="16dp"-->
        <!--android:background="@drawable/ic_flag_drop"-->
        <!--android:rotation="180"/>-->

        <View xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/shadowdrop3"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@drawable/title_bar" />

        <LinearLayout
            android:id="@+id/ll_health_potion_plus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            android:paddingStart="20dp"
            >

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/hp_potion"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Health Potion+"
                    android:includeFontPadding="false"
                    android:textSize="13sp"
                    android:textAlignment="center"
                    android:fontFamily="@font/boldi"
                    android:textColor="@color/colorPrimaryDark"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cour"
                    android:includeFontPadding="false"
                    android:text="@string/plus_health_potion_description"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/boldi"
                    android:includeFontPadding="false"
                    android:text="- 1500 Coin / 100 HP -"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp"/>


            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#707070" />

        <LinearLayout
            android:id="@+id/ll_health_potion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            android:paddingStart="20dp"
            >

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/small_hp_potion"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="vertical"
                android:gravity="center"
                >


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Health Potion"
                    android:includeFontPadding="false"
                    android:textSize="13sp"
                    android:textAlignment="center"
                    android:fontFamily="@font/boldi"
                    android:textColor="@color/colorPrimaryDark"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp"
                    android:includeFontPadding="false"
                    android:textAlignment="center"
                    android:fontFamily="@font/cour"
                    android:text="@string/small_health_potion_description"
                    android:layout_gravity="center"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/boldi"
                    android:includeFontPadding="false"
                    android:text="- 500 Coin / 20 HP -"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp"/>
            </LinearLayout>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#707070" />

        <LinearLayout
            android:id="@+id/ll_challenge_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            android:paddingStart="20dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/challenge_scroll" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Unknown Challenge"
                    android:includeFontPadding="false"
                    android:textSize="13sp"
                    android:textAlignment="center"
                    android:fontFamily="@font/boldi"
                    android:textColor="@color/colorPrimaryDark"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp"
                    android:includeFontPadding="false"
                    android:textAlignment="center"
                    android:fontFamily="@font/cour"
                    android:text="@string/challenge_description"
                    android:layout_gravity="center"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/boldi"
                    android:includeFontPadding="false"
                    android:text="- 1000 Coin / A random Quest -"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp"/>
            </LinearLayout>
        </LinearLayout>
        <View xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/shadowdrop2"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@drawable/title_bar"
            android:rotation="180"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_pull_down"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/ic_pull_down"
            />

    </LinearLayout>
    </LinearLayout>